# traits-and-genes

./: .env.example  .gitignore  TODO
backend/: Dockerfile  app.py  pyproject.toml  test.sql
front/: Dockerfile  package.json  tsconfig.json
front/src/: client.ts
fuploader/: .gitignore  Dockerfile  TODO  index.html  index.js  package.json  tsconfig.json
fuploader/src/: client.ts  index.html  index.ts
fuploader/src/public/: index.html
