[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ps <pablosr11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
snps = "^2.3.0"
fastapi = "^0.68.2"
SQLAlchemy = "^1.4.25"
uvicorn = "^0.15.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
